--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/home/hanzor/snap/netbeans/common/data/11.3/build.properties
+user.properties.file=/home/hanzor/.netbeans/11.0/build.properties
